web/book/tests/snapshots/snapshot__transforms__group__0.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\ngroup [title, country] (\n  aggregate [\n    average salary,\n    ct = count\n  ]\n)\n"
---
SELECT
  title,
  country,
  AVG(salary),
  COUNT(*) AS ct
FROM
  employees
GROUP BY
  title,
  country

